[gd_scene load_steps=14 format=3 uid="uid://bbnop5mmpshyp"]

[ext_resource type="Script" uid="uid://dxrv64uck0wff" path="res://Resource/lawn_mower/lawnmower.gd" id="1_wr3gs"]
[ext_resource type="Texture2D" uid="uid://d0iwfk6l0133c" path="res://Resource/lawn_mower/lawnmower_assets/lawnmower_handle.png" id="2_i3pfl"]
[ext_resource type="Texture2D" uid="uid://bxrtqu71qr8cs" path="res://Resource/lawn_mower/lawnmower_assets/lawnmower_pin.png" id="3_8jwpo"]
[ext_resource type="Texture2D" uid="uid://b2w3fom1yxhou" path="res://Resource/lawn_mower/lawnmower_assets/lawnmower_lowerbase_body.png" id="4_fddor"]
[ext_resource type="Texture2D" uid="uid://bo7ivogpk1no3" path="res://Resource/lawn_mower/lawnmower_assets/lawnmower_upperbase_body.png" id="5_bbq5y"]
[ext_resource type="Texture2D" uid="uid://biohc8ryjy7v1" path="res://Resource/lawn_mower/lawnmower_assets/lawnnmower_wheel_left.png" id="6_sgrpi"]
[ext_resource type="Texture2D" uid="uid://dxd7lh7gjuobi" path="res://Resource/lawn_mower/lawnmower_assets/lawnnmower_wheel_right.png" id="7_7sxdb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fogbp"]
size = Vector2(55, 108)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hwoo1"]
size = Vector2(73, 106)

[sub_resource type="Animation" id="Animation_yvpbc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LawnmowerHandle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-39, -49)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LawnmowerHandle/LawnmowerPin:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-7, 15)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LawnmowerLowerbaseBody:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.5, -28)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LawnmowerUpperbaseBody:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-7.5, -49)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("LawnnmowerWheelLeft:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-28, -5)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("LawnnmowerWheelRight:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(28, -3)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("LawnmowerHandle:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("LawnmowerHandle/LawnmowerPin:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("LawnmowerLowerbaseBody:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("LawnmowerUpperbaseBody:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("LawnnmowerWheelLeft:rotation")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("LawnnmowerWheelRight:rotation")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("LawnmowerHandle:scale")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("LawnmowerHandle/LawnmowerPin:scale")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("LawnmowerLowerbaseBody:scale")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("LawnmowerUpperbaseBody:scale")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("LawnnmowerWheelLeft:scale")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("LawnnmowerWheelRight:scale")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_fogbp"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LawnmowerHandle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-39, -49)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LawnmowerHandle/LawnmowerPin:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-7, 15)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LawnmowerLowerbaseBody:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.5, -28)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LawnmowerUpperbaseBody:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-7.5, -49)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("LawnnmowerWheelLeft:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-28, -5)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("LawnnmowerWheelRight:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(28, -3)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("LawnmowerHandle:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("LawnmowerHandle/LawnmowerPin:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("LawnmowerLowerbaseBody:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("LawnmowerUpperbaseBody:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("LawnnmowerWheelLeft:rotation")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("LawnnmowerWheelRight:rotation")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("LawnmowerHandle:scale")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("LawnmowerHandle/LawnmowerPin:scale")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("LawnmowerLowerbaseBody:scale")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("LawnmowerUpperbaseBody:scale")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("LawnnmowerWheelLeft:scale")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0.92424244)]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("LawnnmowerWheelRight:scale")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0.9285714)]
}

[sub_resource type="Animation" id="Animation_6hjo6"]
resource_name = "running"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LawnnmowerWheelLeft:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.2831855]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LawnnmowerWheelRight:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.2831855]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LawnmowerHandle/LawnmowerPin:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.24),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.25307274, 0.0837758]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LawnmowerUpperbaseBody:position")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.030502528, 0.061005056, 0.09455784, 0.12811062, 0.1555629, 0.18606542, 0.21656795, 0.25012073, 0.28367352, 0.33333334, 0.36383587, 0.3943384, 0.42789117, 0.46144396),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-7.5, -49), Vector2(-7.22, -48.72), Vector2(-7.825, -49.015), Vector2(-7.04, -49.69), Vector2(-6.505, -49.435), Vector2(-7.5, -49), Vector2(-7.22, -48.72), Vector2(-7.825, -49.015), Vector2(-7.04, -49.69), Vector2(-6.505, -49.435), Vector2(-7.5, -49), Vector2(-7.22, -48.72), Vector2(-7.825, -49.015), Vector2(-7.04, -49.69), Vector2(-6.505, -49.435)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("LawnmowerLowerbaseBody:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.04270354, 0.09760809, 0.14031163, 0.19521618, 0.23791972, 0.28977403, 0.33247757, 0.39348263, 0.43618616),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(2.5, -28), Vector2(3.495, -27.84), Vector2(2.5, -28), Vector2(3.495, -27.84), Vector2(2.5, -28), Vector2(3.495, -27.84), Vector2(2.5, -28), Vector2(3.495, -27.84), Vector2(2.5, -28), Vector2(3.495, -27.84)]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.43333334),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn_smoke_through_time"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0wlr1"]
_data = {
&"RESET": SubResource("Animation_yvpbc"),
&"idle": SubResource("Animation_fogbp"),
&"running": SubResource("Animation_6hjo6")
}

[node name="Lawnmower" type="CharacterBody2D"]
collision_layer = 64
collision_mask = 2
script = ExtResource("1_wr3gs")

[node name="trigger_area" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="trigger_area"]
position = Vector2(23.5, -44)
shape = SubResource("RectangleShape2D_fogbp")

[node name="lawnmower_killer" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="lawnmower_killer"]
position = Vector2(-6.5, -45)
shape = SubResource("RectangleShape2D_hwoo1")
debug_color = Color(0.84952956, 0.37430346, 7.70092e-07, 0.41960785)

[node name="LawnmowerHandle" type="Sprite2D" parent="."]
position = Vector2(-39, -49)
texture = ExtResource("2_i3pfl")

[node name="LawnmowerPin" type="Sprite2D" parent="LawnmowerHandle"]
show_behind_parent = true
position = Vector2(-7, 15)
texture = ExtResource("3_8jwpo")

[node name="LawnmowerLowerbaseBody" type="Sprite2D" parent="."]
position = Vector2(2.5, -28)
texture = ExtResource("4_fddor")

[node name="LawnmowerUpperbaseBody" type="Sprite2D" parent="."]
position = Vector2(-7.5, -49)
texture = ExtResource("5_bbq5y")
metadata/_edit_lock_ = true

[node name="LawnnmowerWheelLeft" type="Sprite2D" parent="."]
position = Vector2(-28, -5)
texture = ExtResource("6_sgrpi")
offset = Vector2(0.5, -1)

[node name="LawnnmowerWheelRight" type="Sprite2D" parent="."]
position = Vector2(28, -3)
texture = ExtResource("7_7sxdb")
offset = Vector2(-2.5, -1)

[node name="lawnmower_player" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0wlr1")
}
autoplay = "idle"

[connection signal="body_entered" from="trigger_area" to="." method="_on_trigger_area_body_entered"]
[connection signal="body_entered" from="lawnmower_killer" to="." method="_on_lawnmower_killer_body_entered"]
[connection signal="body_exited" from="lawnmower_killer" to="." method="_on_lawnmower_killer_body_exited"]
